# sat-solver

./: .gitignore  CMakeLists.txt  main.cpp  solver.cpp  solver.h
model/: clause.cpp  clause.h  cnf.cpp  cnf.h  literal.cpp  literal.h
util/: analysis_result.h  cnf_reader.cpp  cnf_reader.h  constant.h  decision.h  dom_tree.cpp  dom_tree.h  type.h
